# risc0-foundry-template

./: Cargo.toml  README.md  rust-toolchain.toml
apps/: Cargo.toml
contracts/: CheckSchema.sol  EvenNumber.sol  ICheckSchema.sol  IEvenNumber.sol
lib/risc0-ethereum/: Cargo.toml
lib/risc0-ethereum/examples/erc20/: Cargo.toml
lib/risc0-ethereum/examples/erc20-counter/: Cargo.toml
lib/risc0-ethereum/examples/governance/: Cargo.toml
lib/risc0-ethereum/examples/token-stats/: Cargo.toml
lib/risc0-ethereum/ffi/guests/echo/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
tests/: EvenNumber.t.sol
tests/res/: data.json
