[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "check-schema"
path = "src/bin/check_schema.rs"

[workspace]

[dependencies]
serde = "1.0"
serde_json = "1.0"
jsonschema = {version = "0.8", default-features = false}
json = "0.12"
alloy-primitives = { version = "=0.8.3", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "=0.8.3" }
risc0-zkvm = { version = "1.0.5", default-features = false, features = ['std'] }

[profile.release]
lto = "thin"
